--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ language: go
 go:
   - 1.6
   - 1.5
+
+script:
+  - go test -coverprofile=coverage.txt
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
