--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,5 @@
 version: '{build}'
-clone_folder: c:\gopath\src\github.com\leighmcculloch\static
+clone_folder: c:\gopath\src\4d63.com\static
 environment:
   GOVERSION: 1.6
   GOPATH: c:\gopath
